--- a/part4/Blog/package.json
+++ b/part4/Blog/package.json
@@ -7,7 +7,9 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "server": "json-server -p3003 --watch db.json",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit",
+    "start:test": "cross-env NODE_ENV=test node index.js"
+
   },
   "author": "",
   "license": "ISC",
