--- a/part7/blogapp/frontend/package.json
+++ b/part7/blogapp/frontend/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,6 +43,7 @@
   },
   "proxy": "http://localhost:3003",
   "devDependencies": {
+    "@redux-devtools/core": "^3.13.1",
     "@testing-library/user-event": "^13.5.0",
     "cypress": "^9.4.1",
     "eslint-plugin-cypress": "^2.12.1",
