--- a/part9/patientorapp/frontend/.eslintrc
+++ b/part9/patientorapp/frontend/.eslintrc
@@ -32,6 +32,6 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "tsconfig.json"
+    "project": "./part9/patientorapp/frontend/tsconfig.json"
   }
 }
